# scanspec

./: .copier-answers.yml  .gitattributes  .gitignore  .gitremotes  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  API_SPEC.md  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  Pipfile  README.md  README.rst  catalog-info.yaml  index.html  plan.md  prd.md  pyproject.toml  schema.gql  schema.json  setup.cfg  setup.py  switcher.json  thoughts.md  versions.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst
0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.1.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.10.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.5/: .buildinfo  genindex.html  index.html  py-modindex.html
0.5.1/: .buildinfo  genindex.html  index.html  py-modindex.html
0.5.2/: genindex.html  index.html  py-modindex.html  search.html
0.5.3/: .buildinfo  genindex.html  search.html
0.5.4/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.5.5/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.6.0/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.6.1/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.6.2/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.6.3/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.6.4/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.6.5/: explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  py-modindex.html  reference.html  search.html  tutorials.html
0.6.6/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.7.0/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.1/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.7.2/: .buildinfo  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.4/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.5/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.6/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.7/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.7.8/: .buildinfo  _api.html  how-to.html  index.html  objects.inv  py-modindex.html  search.html  tutorials.html
0.8.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.8.1/: .buildinfo  _api.html  genindex.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.9.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.9.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.0.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.0a1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.0a2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  http-routingtable.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
delete/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
docs/: conf.py  explanations.rst  github_pages_version_file.py  index.md  (+6 more)
(+1546 files in other folders)
