[metadata]
name = scanspec
description = Specify step and flyscan paths in a serializable, efficient and Pythonic way
url = https://github.com/dls-controls/scanspec
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy
    pydantic

# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[options.entry_points]
# Include a command line script
console_scripts =
    scanspec = scanspec.cli:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --flake8 --black --mypy

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
