[metadata]
name = scanspec
description = Specify step and flyscan paths in a serializable, efficient and Pythonic way
url = https://github.com/dls-controls/scanspec
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.7
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src
install_requires =
    # make sure a python 3.9 compatible numpy is selected
    numpy>=1.19.3
    click
    apischema>=0.17.2
    typing_extensions

[options.extras_require]
# Plotting
plotting =
    # make sure a python 3.9 compatible scipy and matplotlib are selected
    scipy>=1.5.4
    matplotlib>=3.2.2
# REST service support
service =
    fastapi
    uvicorn
# For development tests/docs
dev =
    black==22.3.0
    isort>5.0
    pytest-cov
    mypy
    # remove this dependency once flake8 has dropped "importlib-metadata <=4.3"
    # https://github.com/PyCQA/flake8/pull/1438
    flake8 <= 3.9.2
    flake8-isort
    flake8-pydocstyle
    # TODO: work out why 4.4+ produces
    # WARNING: py:class reference target not found: scanspec.core.Axis
    sphinx < 4.4.0
    sphinx-rtd-theme-github-versions
    sphinx-graphql
    sphinx-apischema
    pre-commit

[options.packages.find]
where = src

# Specify any package data to be included in the wheel below.
# [options.package_data]
# scanspec =
#     subpackage/*.yaml

[options.entry_points]
# Include a command line script
console_scripts =
    scanspec = scanspec.cli:cli

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator
    F722,  # Suppress 'syntax error in forward annotation'

[pydocstyle]
# Make pydocstyle use google docstring format
convention = google
add-ignore =
    D100, # Ignore missing docstring in public modules
    D102, # Ignore missing docstring in public method; See: https://github.com/PyCQA/pydocstyle/issues/309
    D104, # Ignore missing docstring in public packages
    D105, # Ignore missing docstring in magic method
    D107, # Ignore missing docstring in __init__

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=scanspec --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    docs src tests

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
data_file = /tmp/scanspec.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/
